Fix example